I have added the ccs and hmtl files for each page of the website, I am working on making the landing page responsive.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
       <meta charset="UTF-8">
@@ -18,20 +19,20 @@
               </ul>
       </section>
       <section class="landing-page-menu">
-              <a class="active" href="index.html"><i class="fa fa-fw fa-home"></i> Home</a>
-              <a href="about us.html"><i class="fa fa-fw fa-user"></i> About us</a>
-              <a href="Streetwear's evolution.html"><i class="fas fa-vest-patches"></i> Streetwear's evolution</a>
-              <a href="Come to the hub.html"><i class="fas fa-map-pin"></i> Come to the hub</a>
-              <a href="Exclusives.html"><i class="fas fa-fire"></i> Exclusives</a>
+          <a class="active" href="index.html"><i class="fa fa-fw fa-home"></i> Home</a>
+            <a href="about us.html"><i class="fa fa-fw fa-user"></i> About us</a>
+            <a href="Streetwear's evolution.html"><i class="fas fa-vest-patches"></i> Streetwear's evolution</a>
+            <a href="Come to the hub.html"><i class="fas fa-map-pin"></i> Come to the hub</a>
+            <a href="Exclusives.html"><i class="fas fa-fire"></i> Exclusives</a>
       </section>
   </head>
-  <body>
-      <video src="MS1 Landing page .mp4"type= "video/MP4" muted loop autoplay class="video"></video>
-  </body>
+    <body>
+        <video src="MS1 Landing page .mp4"type= "video/MP4" muted loop autoplay class="video"></video>
+    </body>
   <footer>
-      <div class="footer">
+        <div class="footer">
           <p>Copyright Brieanna McDonald 2021</p>
-      </div>
+        </div>
   </footer>
 </html>
 
