--- a/index.html
+++ b/index.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-      <!-- this is the metda data for the code--> 
+   <head>
+      
+      <!-- metda data for the code--> 
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta name="description" content="Vibe Tribe is a hub for creatives in london, England">
       <meta name="keywords" content="creative, fashion, street culture, photography, street art, creatives club, creatives hub">
-      <!-- this links my css and html pages--> 
+
+      <!-- links my css and html pages--> 
       <link rel="stylesheet" href="style.css" type="text/css" />
+
       <!-- this allows me to import icons from font awseome and google fonts --> 
       <script src="https://kit.fontawesome.com/6e65cbaf0a.js" crossorigin="anonymous"></script>
       <link href="https://fonts.googleapis.com/css2?family=Rowdies:wght@300;700&display=swap" rel="stylesheet">
-      <!-- this section only applies to the landing page header, adds the logo and creates a list for the social media icons which I can then style--> 
+
+      <!-- this only applies to the landing page header, adds the logo and creates a list for the social media icons which I can then style--> 
       <section class="landing-page-header">
           <img src = "Logo.png" type= "png" width="200" class="logo"/>
               <ul class="fa-ul">
@@ -21,7 +25,8 @@
                  <li><i class="fa-li fa fa-facebook"></i>Vibe Tribe</li>
               </ul>
       </section>
-      <!-- this section applies to the landing page menu and allows me to create the buttons with icons and link them to the relevant pages. This section of code also allows me to use css to style the menu only --> 
+
+      <!-- this applies to the landing page menu and allows me to create the buttons with icons and link them to the relevant pages. This section of code also allows me to use css to style the menu only --> 
       <section class="landing-page-menu">
           <a class="active" href="index.html"><i class="fa fa-fw fa-home"></i> Home</a>
             <a href="about us.html"><i class="fa fa-fw fa-user"></i> About us</a>
@@ -29,16 +34,19 @@
             <a href="Come to the hub.html"><i class="fas fa-map-pin"></i> Come to the hub</a>
             <a href="Exclusives.html"><i class="fas fa-fire"></i> Exclusives</a>
       </section>
-  </head>
-    <body>
-        <!-- this adds the video to the body section of the landing page, making sure it is muted,looped and plays automatically. This part of the code also allows me to style the video using css --> 
+   </head>
+
+   <body>
+        <!-- adds the video to the body section of the landing page, making sure it is muted,looped and plays automatically. This part of the code also allows me to style the video using css --> 
         <video src="MS1 Landing page .mp4"type= "video/MP4" muted loop autoplay class="video"></video>
-    </body>
-  <footer>
-        <!-- this allows me to style the footer using css and sets the text that will be visble in the footer--> 
+          <img src="MS1-Landing-page-smaller-screens.jpg" class="smaller-screens"></img>
+   </body>
+
+   <footer>
+        <!-- styles the footer using css and sets the text that will be visble in the footer--> 
         <div class="footer">
           <p>Copyright Brieanna McDonald 2021</p>
         </div>
-  </footer>
+   </footer>
 </html>
 
