I have added the structure of the header to the About us page in html..

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <!-- links my css and html pages--> 
       <link rel="stylesheet" href="style.css" type="text/css" />
 
-      <!-- this allows me to import icons from font awseome and google fonts --> 
+      <!-- this allows me to import icons from font awseome and fonts from google fonts --> 
       <script src="https://kit.fontawesome.com/6e65cbaf0a.js" crossorigin="anonymous"></script>
       <link href="https://fonts.googleapis.com/css2?family=Rowdies:wght@300;700&display=swap" rel="stylesheet">
 
@@ -37,16 +37,16 @@
    </head>
 
    <body>
-        <!-- adds the video to the body section of the landing page, making sure it is muted,looped and plays automatically. This part of the code also allows me to style the video using css --> 
-        <video src="MS1 Landing page .mp4"type= "video/MP4" muted loop autoplay class="video"></video>
-          <img src="MS1-Landing-page-smaller-screens.jpg" class="smaller-screens"></img>
+      <!-- adds the video to the body section of the landing page, making sure it is muted,looped and plays automatically. This part of the code also allows me to style the video using css --> 
+      <video src="MS1 Landing page .mp4"type= "video/MP4" muted loop autoplay class="video"></video>
+      <img src="MS1-Landing-page-smaller-screens.jpg" class="smaller-screens"></img>
    </body>
 
    <footer>
-        <!-- styles the footer using css and sets the text that will be visble in the footer--> 
-        <div class="footer">
+      <!-- styles the footer using css and sets the text that will be visble in the footer--> 
+      <div class="footer">
           <p>Copyright Brieanna McDonald 2021</p>
-        </div>
+      </div>
    </footer>
 </html>
 
