--- a/about us.html
+++ b/about us.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
- <html lang="en">
+<html lang="en">
     <head>
       <!-- metda data for the code--> 
       <meta charset="UTF-8">
@@ -20,5 +20,24 @@
           <a href="Come to the hub.html"><i class="fas fa-map-pin"></i> Come to the hub</a>
           <a href="Exclusives.html"><i class="fas fa-fire"></i> Exclusives</a>
       </section>
-    </head>  
- </html>
+    </head>
+    <body>
+         <img src= "Man .png" type="png" class="background">
+         <section class="colour">
+              <img src = "Logo.png" type= "png" width="200" class="logo"/>
+              <br><br>
+              <h1 class="header"> Our Mission</h1>
+              <br><br>
+              <p class = "margin"> Vibe Tribe is a hub for all creatives, influnced by and/or influincing street culture fashion. We have created a space for creatives, to collaborate as a collective, and hang out. No stress just vibes.
+                               If you consider yourself a creative join us on the day(s) convenient for you.  As well as our 24hr project space we will be hosting a range of activities through out the week.
+                               Sign up for exclusive events and updates.
+              </p>
+              <br><br>
+              <p2 class= "location">
+                 <strong>Location: 21 Vibe Street, CR3 4TE</strong>
+              </p2>
+              <br><br>
+              <img src="Spiral-nbg.png" class="Spiral"/>
+         </section>  
+    </body>
+</html>
