added footer structre and styled it.

--- a/about us.html
+++ b/about us.html
@@ -22,7 +22,10 @@
       </section>
     </head>
     <body>
+      <!-- this adds the image to the body of the about us page-->
          <img src= "Man .png" type="png" class="background">
+         
+       <!-- this is content for the left half of the background which I will style using css-->
          <section class="colour">
               <img src = "Logo.png" type= "png" width="200" class="logo"/>
               <br><br>
@@ -40,4 +43,10 @@
               <img src="Spiral-nbg.png" class="Spiral"/>
          </section>  
     </body>
+    <footer>
+      <!-- allow me to style the footer using css and sets the text that will be visble in the footer--> 
+      <div class="footer">
+          <p>Copyright Brieanna McDonald 2021</p>
+      </div>
+   </footer>
 </html>
