--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
    </body>
 
    <footer>
-      <!-- styles the footer using css and sets the text that will be visble in the footer--> 
+      <!-- allow me to style the footer using css and sets the text that will be visble in the footer--> 
       <div class="footer">
           <p>Copyright Brieanna McDonald 2021</p>
       </div>
