added structure to the header of the page.

--- a/about us.html
+++ b/about us.html
@@ -12,7 +12,7 @@
       <script src="https://kit.fontawesome.com/6e65cbaf0a.js" crossorigin="anonymous"></script>
       <link href="https://fonts.googleapis.com/css2?family=Rowdies&family=Work+Sans:wght@300;600&display=swap" rel="stylesheet">
 
-      <!-- this only applies to the landing page header, adds the logo and creates a list for the social media icons which I can then style-->
+      <!-- this only applies to the landing page header. Creates a list for the social media icons which I can then style-->
       <section class="landing-page-menu">
           <a href="index.html"><i class="fa fa-fw fa-home"></i> Home</a>
           <a class="active" href="about us.html"><i class="fa fa-fw fa-user"></i> About us</a>
@@ -24,7 +24,7 @@
     <body>
       <!-- this adds the image to the body of the about us page-->
          <img src= "Man .png" type="png" class="background">
-         
+
        <!-- this is content for the left half of the background which I will style using css-->
          <section class="colour">
               <img src = "Logo.png" type= "png" width="200" class="logo"/>
