--- a/Streetwear's evolution.html
+++ b/Streetwear's evolution.html
@@ -25,3 +25,13 @@
          <!-- adds logo to the page header -->
                  <img src = "Logo.png" type= "png" class="logo"/>  
     </head>
+    <body class="bckgrnd">
+        <br>
+          <h1 class="Font"> What is streetwear?</h1>
+            <br>
+              <section class="WorkSans">
+                 <p class=> Street culture is a term used to refer to urban culture. Like all cultures, streetculutre has an asthetic of its own. Streetwear is casual wear that has become popularise by its exclusive nature. The time line below will document the evolution of this asthetic and give insight into the different factions of street culture that have impacted the asthetic. <strong>Read more</strong></p>
+              </section>
+                 <video src="Streetwear.mp4" type= "video/MP4" controls class="video"></video>
+    </body>
+     
