I am no longer creating a timeline, instead I will be using flip cards.

--- a/Streetwear's evolution.html
+++ b/Streetwear's evolution.html
@@ -25,13 +25,40 @@
          <!-- adds logo to the page header -->
                  <img src = "Logo.png" type= "png" class="logo"/>  
     </head>
+
+         <!-- lets me styke background using css -->
     <body class="bckgrnd">
+
+        <!-- line break -->
         <br>
+
+         <!-- sets header text and allows me to style it -->
           <h1 class="Font"> What is streetwear?</h1>
+
+           <!-- line break -->
             <br>
-              <section class="WorkSans">
-                 <p class=> Street culture is a term used to refer to urban culture. Like all cultures, streetculutre has an asthetic of its own. Streetwear is casual wear that has become popularise by its exclusive nature. The time line below will document the evolution of this asthetic and give insight into the different factions of street culture that have impacted the asthetic. <strong>Read more</strong></p>
-              </section>
-                 <video src="Streetwear.mp4" type= "video/MP4" controls class="video"></video>
+
+             <!-- allows me to style main body text-->
+                 <section class="WorkSans">
+
+                    <!-- main body text-->
+                     <p class=> Street culture is a term used to refer to urban culture. Like all cultures, streetculutre has an asthetic of its own. Streetwear is casual wear that has become popularise by its exclusive nature. The time line below will document the evolution of this asthetic and give insight into the different factions of street culture that have impacted the asthetic. <strong>Read more</strong></p>
+                 </section>
+
+                 <!-- location and name of video. "controls" allows video to controlled by user -->
+                    <video src="Streetwear.mp4" type= "video/MP4" controls class="video"></video>
+
+                    <!-- info for flip card, also lets me style the card in css-->
+                        <div class="Hip-hop">
+                            <div class="Hip-hop-inner">
+                                 <div class="Hip-hop-front">
+                                     <img src="hip-hop.jpg" width= "300px" height="300px" alt="break dancer">
+                                 </div>
+                                     <div class="Hip-hop-back">
+                                        <h1> Hip-Hop</h1>
+                                        <p> Hip-Hop started in the 70s and as it gained popularity, people began to embrace the new stye of fashion that was created alongside it. By the 90s Hip-Hop had popularised ‘street-wear’ moving it from a subsector of fashion to a mainstream trend. During the 90s Hip-Hop icons like Tupac & TLC can be seen wearing barnds such as Dickies, Timberlands, Tommy Hilfiger & Karl Karni. This was the bigging of designer brands catering to the ‘street culture’ asthetic. <strong>Read More.</strong></p>
+                                    </div>
+                            </div>
+                        </div>         
     </body>
      
