I have added the skating flip card with basic styling.

--- a/Streetwear's evolution.html
+++ b/Streetwear's evolution.html
@@ -48,7 +48,7 @@
                  <!-- location and name of video. "controls" allows video to controlled by user -->
                     <video src="Streetwear.mp4" type= "video/MP4" controls class="video"></video>
 
-                    <!-- info for flip card, also lets me style the card in css-->
+                    <!-- info for hip-hop flip card, also lets me style the card in css-->
                         <div class="Hip-hop">
                             <div class="Hip-hop-inner">
                                  <div class="Hip-hop-front">
@@ -56,7 +56,19 @@
                                  </div>
                                      <div class="Hip-hop-back">
                                         <h1> Hip-Hop</h1>
-                                        <p> Hip-Hop started in the 70s and as it gained popularity, people began to embrace the new stye of fashion that was created alongside it. By the 90s Hip-Hop had popularised ‘street-wear’ moving it from a subsector of fashion to a mainstream trend. During the 90s Hip-Hop icons like Tupac & TLC can be seen wearing barnds such as Dickies, Timberlands, Tommy Hilfiger & Karl Karni. This was the bigging of designer brands catering to the ‘street culture’ asthetic. <strong>Read More.</strong></p>
+                                        <p> Hip-Hop started in the 70s and as it gained popularity, people began to embrace the new stye of fashion that was created alongside it. By the 90s Hip-Hop had popularised ‘street-wear’ moving it from a subsector of fashion to a mainstream trend. During the 90s Hip-Hop icons like Tupac & TLC can be seen wearing barnds such as Dickies, Timberlands, Tommy Hilfiger & Karl Karni. This was the begining of designer brands catering to the ‘street culture’ asthetic. <strong>Read More.</strong></p>
+                                    </div>
+                            </div>
+                        </div>
+                            <!-- info for skating flip card, also lets me style the card in css-->
+                        <div class="skating">
+                            <div class="skating-inner">
+                                 <div class="skating-front">
+                                     <img src="skating.jpg" width= "300px" height="320px" alt="skater">
+                                 </div>
+                                     <div class="skating-back">
+                                        <h1> Skating</h1>
+                                        <p> Whilst Hip-Hop is said to  have birthed street culture. Skate culture was also a source of influence. ‘Street sports’ such as skating had become increasingly popular by the 80s with brands Like Stussy catering specialifically to skate culture. They both have played a crucial role in devloping the 90s asthetic. Even now many rappers and skaters share a similar asthetic, decades later. With Converse being a popular brand amongst skaters and basketball players alike at that time. Today Nike has more domminance on both scenes.<strong>Read More.</strong></p>
                                     </div>
                             </div>
                         </div>         
