I have added the basketball flip card with basic styling.

--- a/Streetwear's evolution.html
+++ b/Streetwear's evolution.html
@@ -71,6 +71,18 @@
                                         <p> Whilst Hip-Hop is said to  have birthed street culture. Skate culture was also a source of influence. ‘Street sports’ such as skating had become increasingly popular by the 80s with brands Like Stussy catering specialifically to skate culture. They both have played a crucial role in devloping the 90s asthetic. Even now many rappers and skaters share a similar asthetic, decades later. With Converse being a popular brand amongst skaters and basketball players alike at that time. Today Nike has more domminance on both scenes.<strong>Read More.</strong></p>
                                     </div>
                             </div>
-                        </div>         
+                        </div> 
+                         <!-- info for basketball flip card, also lets me style the card in css-->
+                         <div class="basketball">
+                            <div class="basketball-inner">
+                                 <div class="basketball-front">
+                                     <img src="basketball.jpg" width= "310px" height="360px" alt="skater">
+                                 </div>
+                                     <div class="basketball-back">
+                                        <h1> basketball</h1>
+                                        <p> During the early 80's there was a growing demand for athletic wear to be worn for asthetic. Street ball was also growing in popularity. The Nike air Jordan 1 brought alot of controversy to professional basketball, but the shoe was a huge success as a fashion statement, and helped nike to achive the streetwear staus it has today.  To this day the Jordan and Nike are mayor players in the sneakers game. Sports attire such as jerseys and sneakers have had great influnce on fashion. Some of which is still evident today. With some of the most succesfull sneaker ‘drops’ being tied to iconic sporting events or players.<strong>Read More.</strong></p>
+                                    </div>
+                            </div>
+                        </div>                 
     </body>
      
