--- a/Streetwear's evolution.html
+++ b/Streetwear's evolution.html
@@ -79,10 +79,22 @@
                                      <img src="basketball.jpg" width= "310px" height="360px" alt="skater">
                                  </div>
                                      <div class="basketball-back">
-                                        <h1> basketball</h1>
+                                        <h1> Basketball</h1>
                                         <p> During the early 80's there was a growing demand for athletic wear to be worn for asthetic. Street ball was also growing in popularity. The Nike air Jordan 1 brought alot of controversy to professional basketball, but the shoe was a huge success as a fashion statement, and helped nike to achive the streetwear staus it has today.  To this day the Jordan and Nike are mayor players in the sneakers game. Sports attire such as jerseys and sneakers have had great influnce on fashion. Some of which is still evident today. With some of the most succesfull sneaker ‘drops’ being tied to iconic sporting events or players.<strong>Read More.</strong></p>
                                     </div>
                             </div>
-                        </div>                 
+                        </div> 
+                         <!-- info for street art flip card, also lets me style the card in css-->
+                         <div class="street-art">
+                            <div class="street-art-inner">
+                                 <div class="street-art-front">
+                                     <img src="Street-art.png" width= "310px" height="360px" alt="skater">
+                                 </div>
+                                     <div class="street-art-back">
+                                        <h1> Street art</h1>
+                                        <p> The early 80s saw other subsections of street culutre such as street art also infulencing fashion at that time. Artist such as Keith Heiring. are recognised for being one of the first street artist to bring their art styles to museums and galleries. For these reasons Artisits like Keith Harring  are regarded as street art pioneers, having collabarted with vivenne westwood. At the time challenging the norms of high end fashion and paving the way for the ‘luxury streetwear’ asthetic we have today. With street art maintaining its prensence in the fashion world today.<strong>Read More.</strong></p>
+                                    </div>
+                            </div>
+                        </div>                      
     </body>
      
