Added flip cards for Haute Couture and styled all cards.

--- a/Streetwear's evolution.html
+++ b/Streetwear's evolution.html
@@ -60,11 +60,12 @@
                                     </div>
                             </div>
                         </div>
+                        <br> 
                             <!-- info for skating flip card, also lets me style the card in css-->
                         <div class="skating">
                             <div class="skating-inner">
                                  <div class="skating-front">
-                                     <img src="skating.jpg" width= "300px" height="320px" alt="skater">
+                                     <img src="skating.jpg" width= "300px" height="325px" alt="skater">
                                  </div>
                                      <div class="skating-back">
                                         <h1> Skating</h1>
@@ -72,29 +73,47 @@
                                     </div>
                             </div>
                         </div> 
-                         <!-- info for basketball flip card, also lets me style the card in css-->
-                         <div class="basketball">
-                            <div class="basketball-inner">
-                                 <div class="basketball-front">
-                                     <img src="basketball.jpg" width= "310px" height="360px" alt="skater">
-                                 </div>
-                                     <div class="basketball-back">
-                                        <h1> Basketball</h1>
-                                        <p> During the early 80's there was a growing demand for athletic wear to be worn for asthetic. Street ball was also growing in popularity. The Nike air Jordan 1 brought alot of controversy to professional basketball, but the shoe was a huge success as a fashion statement, and helped nike to achive the streetwear staus it has today.  To this day the Jordan and Nike are mayor players in the sneakers game. Sports attire such as jerseys and sneakers have had great influnce on fashion. Some of which is still evident today. With some of the most succesfull sneaker ‘drops’ being tied to iconic sporting events or players.<strong>Read More.</strong></p>
+                        <br> 
+                            <!-- allows me to style everything in this section -->
+                            <section class="right">
+                                <!-- info for basketball flip card, also lets me style the card in css-->
+                                <div class="basketball">
+                                    <div class="basketball-inner">
+                                        <div class="basketball-front">
+                                            <img src="basketball.jpg" width= "310px" height="360px" alt="skater">
+                                        </div>
+                                            <div class="basketball-back">
+                                                <h1> Basketball</h1>
+                                                <p> During the early 80's there was a growing demand for athletic wear to be worn for asthetic. Street ball was also growing in popularity. The Nike air Jordan 1 brought alot of controversy to professional basketball, but the shoe was a huge success as a fashion statement, and helped nike to achive the streetwear staus it has today.  To this day the Jordan and Nike are mayor players in the sneakers game. Sports attire such as jerseys and sneakers have had great influnce on fashion. Some of which is still evident today. With some of the most succesfull sneaker ‘drops’ being tied to iconic sporting events or players<strong>Read More.</strong></p>
+                                            </div>
                                     </div>
-                            </div>
-                        </div> 
-                         <!-- info for street art flip card, also lets me style the card in css-->
-                         <div class="street-art">
-                            <div class="street-art-inner">
-                                 <div class="street-art-front">
-                                     <img src="Street-art.png" width= "310px" height="360px" alt="skater">
-                                 </div>
-                                     <div class="street-art-back">
-                                        <h1> Street art</h1>
-                                        <p> The early 80s saw other subsections of street culutre such as street art also infulencing fashion at that time. Artist such as Keith Heiring. are recognised for being one of the first street artist to bring their art styles to museums and galleries. For these reasons Artisits like Keith Harring  are regarded as street art pioneers, having collabarted with vivenne westwood. At the time challenging the norms of high end fashion and paving the way for the ‘luxury streetwear’ asthetic we have today. With street art maintaining its prensence in the fashion world today.<strong>Read More.</strong></p>
+                                </div>
+                                <br> 
+                                <!-- info for street art flip card, also lets me style the card in css-->
+                                <div class="street-art">
+                                    <div class="street-art-inner">
+                                        <div class="street-art-front">
+                                            <img src="Street-art.png" width= "309px" height="335px" alt="skater">
+                                        </div>
+                                            <div class="street-art-back">
+                                                <h1> Street art</h1>
+                                                <p> The early 80s saw other subsections of street culutre such as street art also infulencing fashion at that time. Artist such as Keith Heiring. are recognised for being one of the first street artist to bring their art styles to museums and galleries. For these reasons Artisits like Keith Harring  are regarded as street art pioneers, having collabarted with vivenne westwood. At the time challenging the norms of high end fashion and paving the way for the ‘luxury streetwear’ asthetic we have today. With street art maintaining its prensence in the fashion world today.<strong>Read More.</strong></p>
+                                            </div>
                                     </div>
-                            </div>
-                        </div>                      
+                                </div>
+                                <br>
+                                <!-- info for haute coture flip card, also lets me style the card in css-->
+                                <div class="haute-coture">
+                                    <div class="haute-coture-inner">
+                                        <div class="haute-coture-front">
+                                            <img src="LV-Trainers.jpg" width= "310px" height="370px" alt="Louis Vutton & Nike Air Jordan 1 Trainers">
+                                        </div>
+                                            <div class="haute-coture-back">
+                                                <h1> Haute Coture</h1>
+                                                <p> The 80s were crucial to the Streetwear, Haute Coture crossover which created streewear as we know it today. With brands like Supreme with roots in skate culutre reaching $1billion valuation in 2017 and collaborating with the likes of LV.  Gucci releasing their Gucci Ghost collection with clear street culture infulence. High end designers collaborating with streetwear brands has become increasing common.  Virgol abloh’s off-white collobarations with LV,  & Japanese streetwear brands like CDG helping to bring streetwear to the heart of ‘high end’ fashion.  Street culture continues to evolve and push the boundaries.  If you would like to contribute to its evolution,<strong>Join us.</strong></p>
+                                            </div>
+                                    </div>
+                                </div>
+                            </section>                     
     </body>
      
