--- a/Streetwear's evolution.html
+++ b/Streetwear's evolution.html
@@ -74,6 +74,19 @@
                             </div>
                         </div> 
                         <br> 
+                        <!-- info for Japenese streetwear flip card, also lets me style the card in css-->
+                    <div class="japenese-streetwear">
+                        <div class="japenese-streetwear-inner">
+                             <div class="japenese-streetwear-front">
+                                 <img src="cdg.jpg" width= "300px" height="460px" alt="skater">
+                             </div>
+                                 <div class="japenese-streetwear-back">
+                                    <h1> Japenese Streetwear</h1>
+                                    <p> Japanese streetwear also known as Harajuku aesthetic is very prevelant in global streetwear culture. In the 70s and 80s Japanese youth began to rebel against the elders traditions and embrace western culture. Japanese streetwear is a representation of this defiance and non conformitism. These themes are still present in streetwear today, making it a key form of expression amongst creatives, globally. Many of the youth moved to the Harajuku district of Japan in order to escape the traditionalist society, this birthed creativty and designing in Japan as we know it today. Brands such as UNDERCOVER, NEIGHBORHOOD & WTAPS paved the way for brands such as Bape, Commes Des Garcons & AMBUSH.<strong>Read More</strong></p>
+                                </div>
+                        </div>
+                    </div> 
+                        <br> 
                             <!-- allows me to style everything in this section -->
                             <section class="right">
                                 <!-- info for basketball flip card, also lets me style the card in css-->
