--- a/Streetwear's evolution.html
+++ b/Streetwear's evolution.html
@@ -47,8 +47,8 @@
 
                     <!-- location and name of video. "controls" allows video to controlled by user -->
                     <video src="Streetwear.mp4" type= "video/MP4" controls  width= "600vw" height= "800vh" position="relative" float="right"></video>
-
-                    <!-- info for hip-hop flip card, also lets me style the card in css-->
+                        <section class="right">
+                            <!-- info for hip-hop flip card, also lets me style the card in css-->
                             <div class="Hip-hop">
                                 <div class="Hip-hop-inner">
                                     <div class="Hip-hop-front">
@@ -62,31 +62,31 @@
                             </div>
                             <br> 
                                 <!-- info for skating flip card, also lets me style the card in css-->
-                            <div class="skating">
-                                <div class="skating-inner">
-                                    <div class="skating-front">
-                                        <img src="skating.jpg" width= "309px" height="335px" alt="skater">
-                                    </div>
-                                        <div class="skating-back">
-                                            <h1> Skating</h1>
-                                            <p> Whilst Hip-Hop is said to  have birthed street culture. Skate culture was also a source of influence. ‘Street sports’ such as skating had become increasingly popular by the 80s with brands Like Stussy catering specialifically to skate culture. They both have played a crucial role in devloping the 90s asthetic. Even now many rappers and skaters share a similar asthetic, decades later. With Converse being a popular brand amongst skaters and basketball players alike at that time. Today Nike has more domminance on both scenes.<strong>Read More.</strong></p>
+                                <div class="skating">
+                                    <div class="skating-inner">
+                                        <div class="skating-front">
+                                            <img src="skating.jpg" width= "309px" height="335px" alt="skater">
                                         </div>
-                                </div>
-                            </div> 
-                            <br> 
-                            <!-- info for Japenese streetwear flip card, also lets me style the card in css-->
-                            <div class="japenese-streetwear">
-                                <div class="japenese-streetwear-inner">
-                                    <div class="japenese-streetwear-front">
-                                        <img src="cdg.jpg" width= "309px" height="460px" alt="skater">
+                                            <div class="skating-back">
+                                                <h1> Skating</h1>
+                                                <p> Whilst Hip-Hop is said to  have birthed street culture. Skate culture was also a source of influence. ‘Street sports’ such as skating had become increasingly popular by the 80s with brands Like Stussy catering specialifically to skate culture. They both have played a crucial role in devloping the 90s asthetic. Even now many rappers and skaters share a similar asthetic, decades later. With Converse being a popular brand amongst skaters and basketball players alike at that time. Today Nike has more domminance on both scenes.<strong>Read More.</strong></p>
+                                            </div>
                                     </div>
-                                        <div class="japenese-streetwear-back">
-                                            <h1> Japenese Streetwear</h1>
-                                            <p> Japanese streetwear also known as Harajuku aesthetic is very prevelant in global streetwear culture. In the 70s and 80s Japanese youth began to rebel against the elders traditions and embrace western culture. Japanese streetwear is a representation of this defiance and non conformitism. These themes are still present in streetwear today, making it a key form of expression amongst creatives, globally. Many of the youth moved to the Harajuku district of Japan in order to escape the traditionalist society, this birthed creativty and designing in Japan as we know it today. Brands such as UNDERCOVER, NEIGHBORHOOD & WTAPS paved the way for brands such as Bape, Commes Des Garcons & AMBUSH.<strong>Read More</strong></p>
+                                </div> 
+                                <br> 
+                                <!-- info for Japenese streetwear flip card, also lets me style the card in css-->
+                                <div class="japenese-streetwear">
+                                    <div class="japenese-streetwear-inner">
+                                        <div class="japenese-streetwear-front">
+                                            <img src="cdg.jpg" width= "309px" height="460px" alt="skater">
                                         </div>
+                                            <div class="japenese-streetwear-back">
+                                                <h1> Japenese Streetwear</h1>
+                                                <p> Japanese streetwear also known as Harajuku aesthetic is very prevelant in global streetwear culture. In the 70s and 80s Japanese youth began to rebel against the elders traditions and embrace western culture. Japanese streetwear is a representation of this defiance and non conformitism. These themes are still present in streetwear today, making it a key form of expression amongst creatives, globally. Many of the youth moved to the Harajuku district of Japan in order to escape the traditionalist society, this birthed creativty and designing in Japan as we know it today. Brands such as UNDERCOVER, NEIGHBORHOOD & WTAPS paved the way for brands such as Bape, Commes Des Garcons & AMBUSH.<strong>Read More</strong></p>
+                                            </div>
+                                    </div>
                                 </div>
-                            </div>
-                         
+                            </section>
                             <br> 
                             <!-- allows me to style everything in this section -->
                             <section class="left">
