I have added the body of the come to the hub page.

--- a/come to the hub.html
+++ b/come to the hub.html
@@ -1,25 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
 
- <Head>
-     <!-- metda data for the code--> 
-     <meta charset="UTF-8">
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <Head>
+        <!-- metda data for the code--> 
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-     <!-- links my css and html pages--> 
-     <link rel="stylesheet" href="come to the hub.css" type="text/css" />
-     <script src="https://kit.fontawesome.com/6e65cbaf0a.js" crossorigin="anonymous"></script>
+        <!-- links my css and html pages--> 
+        <link rel="stylesheet" href="come to the hub.css" type="text/css" />
+        <script src="https://kit.fontawesome.com/6e65cbaf0a.js" crossorigin="anonymous"></script>
 
-     <!-- this allows me to import icons from font awseome and fonts from google fonts -->
-     <link href="https://fonts.googleapis.com/css2?family=Rowdies&family=Work+Sans:wght@300;600&display=swap" rel="stylesheet">
-     <script src="https://kit.fontawesome.com/6e65cbaf0a.js" crossorigin="anonymous"></script>
+        <!-- this allows me to import icons from font awseome and fonts from google fonts -->
+        <link href="https://fonts.googleapis.com/css2?family=Rowdies&family=Work+Sans:wght@300;600&display=swap" rel="stylesheet">
+        <script src="https://kit.fontawesome.com/6e65cbaf0a.js" crossorigin="anonymous"></script>
 
-     <!-- this only applies to the landing page header. Creates a list for the social media icons which I can then style-->
-        <section class="landing-page-menu">
-            <a href="index.html"><i class="fa fa-fw fa-home"></i> Home</a>
-            <a href="about us.html"><i class="fa fa-fw fa-user"></i> About us</a>
-            <a href="Streetwear's evolution.html"><i class="fas fa-vest-patches"></i> Streetwear's evolution</a>
-            <a class="active" href="Come to the hub.html"><i class="fas fa-map-pin"></i> Come to the hub</a>
-            <a href="Exclusives.html"><i class="fas fa-fire"></i> Exclusives</a>
-        </section>      
-</Head>
+        <!-- this only applies to the landing page header. Creates a list for the social media icons which I can then style-->
+            <section class="landing-page-menu">
+                <a href="index.html"><i class="fa fa-fw fa-home"></i> Home</a>
+                <a href="about us.html"><i class="fa fa-fw fa-user"></i> About us</a>
+                <a href="Streetwear's evolution.html"><i class="fas fa-vest-patches"></i> Streetwear's evolution</a>
+                <a class="active" href="Come to the hub.html"><i class="fas fa-map-pin"></i> Come to the hub</a>
+                <a href="Exclusives.html"><i class="fas fa-fire"></i> Exclusives</a>
+            </section>      
+    </Head>
+    <body>
+        <!-- defines the location of the image and allows me to style it in css-->
+        <img src="woman.png" type="png"class="img"/>
+        <!-- defines the location of the logo and allows me to style it in css-->
+        <img src = "Logo.png" type= "png" class="logo"/>
+            <!-- sets the information for the table allows me to style it in css-->
+            <div class="style">
+            <table>
+                <tr>
+                <th>Day</th>
+                <th>Activity</th>
+                </tr>
+                <tr>
+                <td>Monday</td>
+                <td>Skating</td>
+                </tr>
+                <tr>
+                <td>Tuesday</td>
+                <td>Photography</td>
+                </tr>
+                <tr>
+                <td>Wednesday</td>
+                <td>Design</td>
+                </tr>
+                <tr>
+                <td>Thursday</td>
+                <td>Basketball</td>
+                </tr>
+                <tr>
+                <td>Friday</td>
+                <td>Fashion</td>
+                </tr>
+            </table>
+            </div>
+                 <!-- text that will be displayed below the table-->
+                 <P1 class="text"><strong>The hub is open 24hrs.</strong><br>Under 18s <strong><u>MUST</u> </strong>be accompanied by an adult. <br><br> <u><strong>Spaces for activites are limited.</strong></u> We recommend signing up to get early access to registration.</P1>
+    </body>
