I have added and styled the footer. finished styling the table. Added the image.

--- a/come to the hub.html
+++ b/come to the hub.html
@@ -19,7 +19,7 @@
                 <a href="index.html"><i class="fa fa-fw fa-home"></i> Home</a>
                 <a href="about us.html"><i class="fa fa-fw fa-user"></i> About us</a>
                 <a href="Streetwear's evolution.html"><i class="fas fa-vest-patches"></i> Streetwear's evolution</a>
-                <a class="active" href="Come to the hub.html"><i class="fas fa-map-pin"></i> Come to the hub</a>
+                <a class="active" href="come to the hub.html"><i class="fas fa-map-pin"></i> Come to the hub</a>
                 <a href="Exclusives.html"><i class="fas fa-fire"></i> Exclusives</a>
             </section>      
     </Head>
@@ -60,3 +60,10 @@
                  <!-- text that will be displayed below the table-->
                  <P1 class="text"><strong>The hub is open 24hrs.</strong><br>Under 18s <strong><u>MUST</u> </strong>be accompanied by an adult. <br><br> <u><strong>Spaces for activites are limited.</strong></u> We recommend signing up to get early access to registration.</P1>
     </body>
+    <footer>
+        <div class="footer">
+           <p>Copyright Brieanna McDonald 2021</p>
+        </div>
+    </footer>
+</html>
+     
