--- a/about us.html
+++ b/about us.html
@@ -17,7 +17,7 @@
           <a href="index.html"><i class="fa fa-fw fa-home"></i> Home</a>
           <a class="active" href="about us.html"><i class="fa fa-fw fa-user"></i> About us</a>
           <a href="Streetwear's evolution.html"><i class="fas fa-vest-patches"></i> Streetwear's evolution</a>
-          <a href="Come to the hub.html"><i class="fas fa-map-pin"></i> Come to the hub</a>
+          <a href="come to the hub.html"><i class="fas fa-map-pin"></i> Come to the hub</a>
           <a href="Exclusives.html"><i class="fas fa-fire"></i> Exclusives</a>
       </section>
     </head>
