added structure for the table

--- a/come to the hub.html
+++ b/come to the hub.html
@@ -22,4 +22,38 @@
              <a href="Exclusives.html"><i class="fas fa-fire"></i> Exclusives</a>
         </section>      
     </Head>
+    <body>
+        <img src="woman.png" type="png"class="img"/>
+          <img src = "Logo.png" type= "png" class="logo"/>
+            <div class="style">
+              <table>
+                <tr>
+                  <th>Day</th>
+                  <th>Activity</th>
+                </tr>
+                <tr>
+                  <td>Monday</td>
+                  <td>Skating</td>
+                </tr>
+                <tr>
+                  <td>Tuesday</td>
+                  <td>Photography</td>
+                </tr>
+                <tr>
+                  <td>Wednesday</td>
+                  <td>Design</td>
+                </tr>
+                <tr>
+                  <td>Thursday</td>
+                  <td>Basketball</td>
+                </tr>
+                <tr>
+                  <td>Friday</td>
+                  <td>Fashion</td>
+                </tr>
+              </table>
+            </div>
+                  <P1 class="text"><strong>The hub is open 24hrs.</strong><br>Under 18s <strong><u>MUST</u> </strong>be accompanied by an adult. <br><br> <u><strong>Spaces for activites are limited.</strong></u> We recommend signing up to get early access to registration.</P1>
+    </body>
+   
 </html>
