added and styled the footer

--- a/come to the hub.html
+++ b/come to the hub.html
@@ -55,5 +55,9 @@
             </div>
                   <P1 class="text"><strong>The hub is open 24hrs.</strong><br>Under 18s <strong><u>MUST</u> </strong>be accompanied by an adult. <br><br> <u><strong>Spaces for activites are limited.</strong></u> We recommend signing up to get early access to registration.</P1>
     </body>
-   
+    <footer>
+      <div class="footer">
+         <p>Copyright Brieanna McDonald 2021</p>
+      </div>
+    </footer>   
 </html>
