corrected the typo, page now linked correctly

--- a/come to the hub.html
+++ b/come to the hub.html
@@ -7,7 +7,7 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
       
      <!-- links my css and html pages--> 
-     <link rel="stylesheet" href="Come to the hub.css" type="text/css" />
+     <link rel="stylesheet" href="come to the hub.css" type="text/css" />
 
      <!-- this allows me to import icons from font awseome and fonts from google fonts -->
      <script src="https://kit.fontawesome.com/6e65cbaf0a.js" crossorigin="anonymous"></script>
@@ -18,7 +18,7 @@
              <a href="index.html"><i class="fa fa-fw fa-home"></i> Home</a>
              <a href="about us.html"><i class="fa fa-fw fa-user"></i> About us</a>
              <a href="Streetwear's evolution.html"><i class="fas fa-vest-patches"></i> Streetwear's evolution</a>
-             <a class="active" href="Come to the hub.html"><i class="fas fa-map-pin"></i> Come to the hub</a>
+             <a class="active" href="come to the hub.html"><i class="fas fa-map-pin"></i> Come to the hub</a>
              <a href="Exclusives.html"><i class="fas fa-fire"></i> Exclusives</a>
         </section>      
     </Head>
