--- a/come to the hub.html
+++ b/come to the hub.html
@@ -23,9 +23,13 @@
         </section>      
     </Head>
     <body>
+        <!-- location of the body image and allows me to style it-->
         <img src="woman.png" type="png"class="img"/>
+          <!-- location of the logo image and allows me to style it-->
           <img src = "Logo.png" type= "png" class="logo"/>
+            <!--  allows me to style the table-->
             <div class="style">
+              <!--  Sets table content -->
               <table>
                 <tr>
                   <th>Day</th>
@@ -53,10 +57,13 @@
                 </tr>
               </table>
             </div>
+                 <!--  Sets and styles the text -->
                   <P1 class="text"><strong>The hub is open 24hrs.</strong><br>Under 18s <strong><u>MUST</u> </strong>be accompanied by an adult. <br><br> <u><strong>Spaces for activites are limited.</strong></u> We recommend signing up to get early access to registration.</P1>
     </body>
     <footer>
+       <!-- Allows me to style the footer-->
       <div class="footer">
+        <!-- Footer text-->
          <p>Copyright Brieanna McDonald 2021</p>
       </div>
     </footer>   
